--- a/src/app/pieces/tasks/random-event/random-event.component.scss
+++ b/src/app/pieces/tasks/random-event/random-event.component.scss
@@ -4,7 +4,6 @@
     width: 400px;
     height: 400px;
     position: relative;
-    transition: all 0.5s ease;
 
     &-menu {
         position: absolute;
@@ -111,7 +110,7 @@
         background-color: #f7f7f7;
         z-index: -1;
         bottom: 10px;
-        left: 45px;
+        right: 0;
         border: solid black 1px;
         border-top-right-radius: 10px;
         border-bottom-right-radius: 10px;
