--- a/src/app/sider-pieces/characters/characters.component.scss
+++ b/src/app/sider-pieces/characters/characters.component.scss
@@ -23,6 +23,7 @@
         border: none;
         border-radius: 10px;
         background-color: white;
+        padding: 5px 10px 5px 10px;
     }
 
     textarea {
@@ -67,7 +68,7 @@
             margin-bottom: 10px;
         }
 
-        &-create {
+        &-character {
             margin-bottom: 10px;
             padding-bottom: 10px;
             border-bottom: solid black 1px;
@@ -133,27 +134,6 @@
                     }
                 }
 
-            }
-        }
-
-        &-delete {
-            margin-bottom: 10px;
-            padding-bottom: 10px;
-            border-bottom: solid black 1px;
-
-            &-container {
-                display: flex;
-                flex-direction: row;
-                width: 100%;
-
-                &-select {
-                    display: flex;
-                    flex-direction: row;
-
-                    select {
-                        width: 200px;
-                    }
-                }
             }
         }
     }
