--- a/src/app/pieces/tasks/final-task/final-task.component.html
+++ b/src/app/pieces/tasks/final-task/final-task.component.html
@@ -3,7 +3,8 @@
     'linear-gradient(140deg, var(--piece-background-color) 0%, var(--piece-background-color) 55%,'+task.supplementaryRole.color+' 55%,'+task.supplementaryRole.color+' 100%)'
     : 'var(--piece-background-color)'"
     matTooltip="Tâche finale: il s'agit de la dernière action à effectuer pour clore la quête."
-    matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedTooltips">
+    matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedTooltips"
+    [ngClass]="{'isActive': (pieceDetailsService.piece == task ? true : false)}">
     <div class="piece-attach piece-attach-left"></div>
 
     <div class="piece-menu" [class]="displayMenu">
