--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,3 +42,19 @@ body {
         font-family: 'Glacial Indifference', sans-serif;
     }
 }
+
+.isActive::after {
+    animation: 1s effect infinite;
+    z-index: 2;
+    pointer-events: none;
+}
+
+$highlight-color: #009b00;
+@keyframes effect {
+    0%, 100% {
+        box-shadow: inset 0 0 10px $highlight-color;
+    }
+    50% {
+        box-shadow: inset 0 0 20px $highlight-color;
+    }
+}
