--- a/src/app/sider-pieces/characters/characters.component.html
+++ b/src/app/sider-pieces/characters/characters.component.html
@@ -1,5 +1,5 @@
 <div class="piece"
-matTooltip="Si des personnages non joueurs (PNJ) doivent intervenir dans le scénario, ils doivent être décrits avec cette tuile. Chaque personnage a sa propre couleur et sont visibles sur les tâches où ils interviennent. L'enseignant peut être considéré comme un personnage s'il n'a pas un Rôle à part entière."
+matTooltip="Permet d'affecter un ou des personnages précédemment créé(s) à la tâche."
 matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedTooltips">
     <div class="piece-form">
         <div class="piece-form-select">
