--- a/src/app/pieces/step/step.component.html
+++ b/src/app/pieces/step/step.component.html
@@ -21,7 +21,7 @@
     <div class="piece-form">
         <div class="piece-form-title">Étape {{index+1}}</div>
         <mat-icon class="piece-form-comment" fontIcon="comment" *ngIf="step.comments.length > 0"></mat-icon>
-        <textarea [(ngModel)]="step.description"></textarea>
+        <textarea [(ngModel)]="step.description" [style.background-image]="index == FirstStepIndex() ? urlIcon : ''"></textarea>
         <div class="piece-form-duration">
             <label for="duration">Durée</label>
             <input name="duration" type="number" [(ngModel)]="step.duration" (input)="durationChange()"/>
