--- a/src/app/pieces/tasks/random-event/random-event.component.html
+++ b/src/app/pieces/tasks/random-event/random-event.component.html
@@ -72,14 +72,18 @@
         <div class="piece-prerequires-prerequires">
             <label class="piece-prerequires-title">Antécédents</label>
             <div class="piece-prerequires-form">
-                <ng-container *ngFor="let inlineTask of role.tasks">
-                    <ng-container *ngFor="let element of inlineTask; let index = index">
-                        <div class="piece-prerequires-prerequires-element" *ngIf="element?.identifier && (task.identifier != element?.identifier) && index < j">
-                            <input name="antecedent" type="checkbox" [checked]="isCheckedTask(element)" (change)="checkboxChangedTask($event, element)"/>
-                            <label for="antecedent">{{element?.identifier}}</label>
-                        </div>
+                <div style="text-align: center;" *ngIf="j == 0">La première tâche de la ligne ne peut pas avoir d'antécédent</div>
+                <ng-container *ngIf="hasPossibleAntecedents()">
+                    <ng-container *ngFor="let inlineTask of role.tasks">
+                        <ng-container *ngFor="let element of inlineTask; let index = index">
+                            <div class="piece-prerequires-prerequires-element" *ngIf="element?.identifier && (task.identifier != element?.identifier) && index < j">
+                                <input name="antecedent" type="checkbox" [checked]="isCheckedTask(element)" (change)="checkboxChangedTask($event, element)"/>
+                                <label for="antecedent">{{element?.identifier}}</label>
+                            </div>
+                        </ng-container>
                     </ng-container>
                 </ng-container>
+                <div style="text-align: center;" *ngIf="!hasPossibleAntecedents() && j != 0">Veuillez d'abords entrer des identifiants aux tâches précédentes</div>
             </div>
         </div>
         <div class="piece-prerequires-ressources">
