add 'WIP' to 'implement in unity'

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -132,7 +132,7 @@
     <div class="container-settings">
         <div class="container-settings-mode">
             <input name="unity" type="checkbox" />
-            <label for="unity">Intégrer le jeu sous Unity</label>
+            <label for="unity">Intégrer le jeu sous Unity (WIP)</label>
         </div>
         <div class="container-settings-mode">
             <input name="tooltip" type="checkbox" [(ngModel)]="tooltipService.activatedTooltips"/>
