--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -130,11 +130,15 @@
     </div>
 
     <div class="container-settings">
-        <div class="container-settings-mode">
+        <div class="container-settings-mode"
+        matTooltip="Utilisation dans un template de jeu précis. Contacter gaelle.guigon@imt-nord-europe.fr pour plus d’informations."
+        matTooltipPosition="below" [matTooltipDisabled]="!tooltipService.activatedTooltips">
             <input name="unity" type="checkbox" />
             <label for="unity">Intégrer le jeu sous Unity (WIP)</label>
         </div>
-        <div class="container-settings-mode">
+        <div class="container-settings-mode"
+        matTooltip="Descriptif de chaque élément de RLG Maker."
+        matTooltipPosition="below" [matTooltipDisabled]="!tooltipService.activatedTooltips">
             <input name="tooltip" type="checkbox" [(ngModel)]="tooltipService.activatedTooltips"/>
             <label for="tooltip">Activer les aides</label>
         </div>
