--- a/src/app/sider-pieces/interupt/interupt.component.html
+++ b/src/app/sider-pieces/interupt/interupt.component.html
@@ -1,5 +1,5 @@
 <div class="piece"
-matTooltip="Une tâche peut être interrompue par un autre rôle, ceci est plutôt utilisé dans les compétitifs"
+matTooltip="Une tâche peut être interrompue par un autre rôle, ceci est plutôt utilisé dans les jeux compétitifs"
 matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedTooltips">
     <div class="piece-form">
         <div class="piece-form-header">
