--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,9 +33,17 @@ body {
         font-size: 17px;
     }
 
+    input::placeholder {
+        opacity: 0.25;
+    }
+
     textarea {
         font-family: 'Glacial Indifference', sans-serif;
         font-size: 17px;
+    }
+
+    textarea::placeholder {
+        opacity: 0.25;
     }
 
     select {
