change 'Attribu'by 'Compétence'

--- a/src/app/pieces/role/role.component.html
+++ b/src/app/pieces/role/role.component.html
@@ -153,7 +153,7 @@
                     <label for="type">Type</label>
                     <select name="type" [(ngModel)]="ressource.type">
                         <option value="ressource">Ressource / Objet</option>
-                        <option value="attribut">Attribut</option>
+                        <option value="attribut">Compétence</option>
                     </select>
                 </div>
                 <button mat-button><mat-icon fontIcon="remove" (click)="removeRessource(i)"></mat-icon></button> 
