--- a/src/app/pieces/tasks/optionnal-task/optionnal-task.component.html
+++ b/src/app/pieces/tasks/optionnal-task/optionnal-task.component.html
@@ -99,7 +99,7 @@
             </div>
         </div>
         <div class="piece-prerequires-ressources">
-            <label class="piece-prerequires-title">Ressources & attributs</label>
+            <label class="piece-prerequires-title">Ressources & Compétences</label>
             <div class="piece-prerequires-form">
                 <ng-container *ngFor="let ressource of scenario.ressources">
                     <div class="piece-prerequires-ressources-element" *ngIf="ressource.name">
