close prerequire on change selected piece

--- a/src/app/pieces/tasks/annexe-task/annexe-task.component.html
+++ b/src/app/pieces/tasks/annexe-task/annexe-task.component.html
@@ -51,7 +51,7 @@
         </div>
     </div>
 
-    <div class="piece-prerequires" [class]="displayPrequires">
+    <div class="piece-prerequires" [class]="pieceDetailsService.piece == task ? displayPrequires : 'hide'">
         <div class="piece-prerequires-prerequires">
             <label class="piece-prerequires-title">Antécédents</label>
             <div class="piece-prerequires-form">
