border sider pieces css

--- a/src/app/sider-pieces/characters/characters.component.scss
+++ b/src/app/sider-pieces/characters/characters.component.scss
@@ -4,8 +4,8 @@
     width: 300px;
     position: relative;
     background-color: var(--piece-background-color);
-    border: solid black 1px;
-    border-radius: 10px;
+    border: solid #707070 1px;
+    border-radius: 6px;
 
     label {
         margin-right: 10px;
